bug fix - admin panel menu (rtl) dark mode background

--- a/packages/Webkul/Admin/src/Resources/assets/sass/partials/_rtl.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/partials/_rtl.scss
@@ -22,9 +22,6 @@
 
     .navbar-left {
         right: 0;
-        border-left: 1px solid rgba(162, 162, 162, 0.2);
-        border-right: none;
-        background-color: $white;
 
         ul.menubar {
 
